# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [1.0.1] - 2021/11/28
### Added
 - Add CopainDavantAPI
 - Add SkiplyAPI

### Deleted
 - Delete MarineTrafficAPI (not working anymore)



## [1.0.0] - 2021/11/01
### Added
 - Add AisHubAPI
 - Add BuildWithAPI
 - Add DbIpAPI
 - Add DNSDumpsterAPI
 - Add DomainBigDataAPI
 - Add DomainmetricsAPI
 - Add FofaAPI
 - Add GeodataToolAPI
 - Add GeoIpViewAPI
 - Add IpFingerprintsAPI
 - Add KeyCDNAPI
 - Add MarineTrafficAPI
 - Add MnemonicAPI
 - Add MoonsearchAPI
 - Add OpenBugbountyAPI
 - Add RapidDNSAPI
 - Add ReverseWhoisAPI
 - Add SpyOnWebAPI
 - Add W3TechsAPI
 - Add WikileaksAPI
 - Add ZoomEyeAPI