@@ -2,6 +2,7 @@ import logging
 
 import requests
 from bs4 import BeautifulSoup
+from dateutil.parser import parse as dt_parse
 
 from apipyfy.base import BaseAPI
 
@@ -18,7 +19,7 @@ class CopainDavantAPI(BaseAPI):
         >>> api = CopainDavantAPI()
         >>> for p in api.search('John Doe'):
         >>>    print(p)
-        {'fullname': 'John Doe', 'id': 'john-doe-12345', 'avatar': 'https://image-uniservice.linternaute.com/image/75/5/12345/7890.jpg', 'birthday': '1 avril 1987', 'address': '1 avenue de Paradis Paris France', 'job': 'Pentester', 'rels': [{'id': 'alice-bob-22222', 'fullname': 'Alice Bob'}]}
+        {'fullname': 'John Doe', 'id': 'john-doe-12345', 'avatar': 'https://image-uniservice.linternaute.com/image/75/5/12345/7890.jpg', 'birthday': datetime('1 avril 1987'), 'address': '1 avenue de Paradis Paris France', 'job': 'Pentester', 'rels': [{'id': 'alice-bob-22222', 'fullname': 'Alice Bob'}]}
     """
     def __init__(self, user_agent='ApiPyFy/1.0.0', proxy=None) -> None:
         super().__init__(user_agent, proxy)
@@ -58,7 +59,7 @@ class CopainDavantAPI(BaseAPI):
                 user = {'fullname': details.get('lib').split(' (').title(),
                         'id': details.get('url')[3:],
                         'avatar': details.get('img'),
-                        'birthday': details.get('dat'),
+                        'birthday': dt_parse(details.get('dat')),
                         'address': address,
                         'job': details['pro'],
                         'rels': []
