@@ -1,3 +1,2 @@
-python-dateutil
 requests
 bs4
