@@ -1,2 +1,3 @@
 requests
 bs4
+python-dateutil
