@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
  - Add CopainDavantAPI
  - Add SkiplyAPI
+ - Add Pip install script
 
 ### Deleted
  - Delete MarineTrafficAPI (not working anymore)
